--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ version = '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
+    mavenLocal()
 }
 
 dependencies {
@@ -14,6 +15,7 @@ dependencies {
     implementation 'de.gerdi-project:GSON:6.0.6'
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+    implementation("com.oracle:ojdbc11.jar")
 }
 
 test {
