--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,9 @@ version = '1.0-SNAPSHOT'
 repositories {
     mavenCentral()
     mavenLocal()
+    flatDir{
+        dirs 'lib'
+    }
 }
 
 dependencies {
@@ -15,7 +18,8 @@ dependencies {
     implementation 'de.gerdi-project:GSON:6.0.6'
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
-    implementation("com.oracle:ojdbc11.jar")
+    //implementation("com.oracle:ojdbc11")
+    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.33'
 }
 
 test {
